--- a/composer.json
+++ b/composer.json
@@ -15,5 +15,8 @@
         "duncan3dc/blade": "^4.16",
         "catfan/medoo": "^2.2",
         "fakerphp/faker": "^1.24"
+    },
+    "require-dev": {
+        "deployer/deployer": "^7.5"
     }
 }
